--- a/.gitignore
+++ b/.gitignore
@@ -41,3 +41,23 @@ app.*.map.json
 /android/app/debug
 /android/app/profile
 /android/app/release
+
+
+# Flutter build files
+build/
+.android/
+.ios/
+
+# Firebase & API keys
+.env
+google-services.json
+GoogleService-Info.plist
+
+# Python cache & model
+__pycache__/
+*.pyc
+*.pkl
+
+# System files
+.DS_Store
+Thumbs.db
